correcting enrollment alignment

--- a/styles/call-to-action/_call-to-action.scss
+++ b/styles/call-to-action/_call-to-action.scss
@@ -14,8 +14,16 @@
     @media all and (min-width: 768px) {
         margin: 0 auto;
         margin-bottom: 5rem;
+        margin-left: 1.6rem;
+        margin-right: 1.6rem;
         margin-top: 5rem;
         padding: 8rem;
+    }
+
+    @media all and (min-width: 1250px) {
+        margin: 0 auto;
+        margin-bottom: 5rem;
+        margin-top: 5rem;
     }
 }
 
