--- a/styles/call-to-action/_content.scss
+++ b/styles/call-to-action/_content.scss
@@ -1,10 +1,5 @@
 @mixin base() {
    text-align: center;
-   width: 100%;
-
-   @media all and (min-width: 1250px) {
-        // min-width: 30vw;
-   }
 
 }
 
