--- a/styles/call-to-action/_group.scss
+++ b/styles/call-to-action/_group.scss
@@ -3,9 +3,11 @@
     flex-direction: column;
 
     @media all and (min-width: 768px) {
-        align-items: center;
+        // align-items: center;
         flex-direction: row;
-        justify-content: center;
+        justify-content: space-around;
+        margin: 0 auto;
+        max-width: 70%;
     }
         
 }
