--- a/styles/content/_text.scss
+++ b/styles/content/_text.scss
@@ -39,5 +39,9 @@
             line-height: 2.5rem;
         }
     }
+
+    &--color {
+        color: $yellow;
+    }
     
 }
